--- a/index.html
+++ b/index.html
@@ -12,35 +12,43 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Rotterdam</h1>
-        <ul>
-          <li>Friday, 17:00</li>
-          <li>Cloudy</li>
-        </ul>
-      </div>
-      <div class="row">
-        <div class="row-6">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCxWlb9e7ptvz68e67r5PyU5_Or2sNZtREjwZEok4A3UXWpEY&s"
-            alt="Cloudy"
-          />
-          12°C | °F
-        </div>
-        <div class="row-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+          <h1 id="city"></h1>
           <ul>
-            <li>Precipitaion: 3%</li>
-            <li>Humidity: 65%</li>
-            <li>Wind: 6km/h</li>
+            <li>Friday, 17:00</li>
+            <li id="description"></li>
           </ul>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-6">
+            <div class="clearfix weather-temperature">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                alt="Cloudy"
+                class="float-left"
+              />
 
+              <div class="float-left">
+                <strong id="temperature"></strong>
+                <span class="units">°C | <a href="#">°F</a></span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span>km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <small>
         <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
           >Open-source code</a
@@ -48,6 +56,7 @@
         by Nadiia Kotolup
       </small>
     </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
