--- a/index.html
+++ b/index.html
@@ -20,27 +20,24 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-          <h1 id="city"></h1>
-          <ul>
-            <li>Last updated: <span id="date"></span></li>
-            <li id="description"></li>
-          </ul>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <div class="clearfix weather-temperature">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt="Cloudy"
-                class="float-left"
-              />
-
+            <h1 id="city"></h1>
+            <ul>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src=".." alt="Cloudy" id="icon" class="float-left" />
+           
               <div class="float-left">
                 <strong id="temperature"></strong>
                 <span class="units">°C | <a href="#">°F</a></span>
               </div>
             </div>
           </div>
+
           <div class="col-6">
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
@@ -49,6 +46,7 @@
           </div>
         </div>
       </div>
+
       <small>
         <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
           >Open-source code</a
