--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+            <div class="col-9">
+              <input type="search"
+              placeholder="Type a city..."
+              class="form-control"
+              id="city-input"
+              autocomplete="off"/>
+            </div>  
+            <div class="col-3">
+              <input
+            type="submit"
+            value="Search"  
+            class="btn btn-primary w-100"/>
+            </div>
+            </div>
+          </form>
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
@@ -29,15 +46,14 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img src=".." alt="Cloudy" id="icon" class="float-left" />
+                <img src="" alt="Cloudy" id="icon" class="float-left" />
            
               <div class="float-left">
-                <strong id="temperature"></strong>
-                <span class="units">°C | <a href="#">°F</a></span>
+                <strong id="temperature"></strong
+                ><span class="units">°C | <a href="#">°F</a></span>
               </div>
             </div>
           </div>
-
           <div class="col-6">
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
@@ -46,7 +62,6 @@
           </div>
         </div>
       </div>
-
       <small>
         <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
           >Open-source code</a
@@ -54,7 +69,6 @@
         by Nadiia Kotolup
       </small>
     </div>
-
     <script src="src/index.js"></script>
   </body>
 </html>
