--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
             </ul>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2"> 
+              <div class="weather-forecast-date">Thu</div>
+              <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="" width="42"/>
+              <div class="weather-forecast-temperatures">
+                <span class="weather-forecast-temperature-max"> 18° </span>
+                <span class="weather-forecast-temperature-min"> 12° </span>
+              </div>
+            </div>
+          </div> 
+        </div>
       </div>
       <small>
         <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
