--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
         <div class="weather-app">
           <form id="search-form" class="mb-3">
             <div class="row">
-            <div class="col-9">
-              <input type="search"
-              placeholder="Type a city..."
-              class="form-control"
-              id="city-input"
-              autocomplete="off"/>
-            </div>  
-            <div class="col-3">
-              <input
-            type="submit"
-            value="Search"  
-            class="btn btn-primary w-100"/>
-            </div>
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city..."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
             </div>
           </form>
           <div class="overview">
@@ -46,39 +49,32 @@
             <div class="col-6">
               <div class="clearfix weather-temperature">
                 <img src="" alt="Cloudy" id="icon" class="float-left" />
-           
-              <div class="float-left">
-                <strong id="temperature"></strong
-                ><span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Humidity: <span id="humidity"></span>%</li>
-              <li>Wind: <span id="wind"></span> km/h</li>
-            </ul>
-          </div>
-        </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2"> 
-              <div class="weather-forecast-date">Thu</div>
-              <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="" width="42"/>
-              <div class="weather-forecast-temperatures">
-                <span class="weather-forecast-temperature-max"> 18° </span>
-                <span class="weather-forecast-temperature-min"> 12° </span>
-              </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
             </div>
-          </div> 
+          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
+        <small>
+          <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
+            >Open-source code</a
+          >
+          by Nadiia Kotolup
+        </small>
       </div>
-      <small>
-        <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
-          >Open-source code</a
-        >
-        by Nadiia Kotolup
-      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
