Changed open-source link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
           <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
-          <a href="https://genuine-twilight-8ff93f.netlify.app" target="_blank"
+          <a
+            href="https://bucolic-salamander-9998c0.netlify.app/"
+            target="_blank"
             >Open-source code</a
           >
           by Nadiia Kotolup
