--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
           <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
-          <a
-            href="https://bucolic-salamander-9998c0.netlify.app/"
-            target="_blank"
+          <a href="https://github.com/NadiiaKotolup/Weather-App" target="_blank"
             >Open-source code</a
           >
           by Nadiia Kotolup
